# deep-research-agent

./: .env.sample  README.md  pyproject.toml  research_agent.py
.github/workflows/: daily.yml
jobs/: event_research.yaml
prompts/: prompt_definition.yaml
schemas/: research_result.schema.json
